--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "working-nyc",
+  "name": "nyco/working-nyc",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "authors": [
     {
       "name": "NYC Opportunity",
