--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workingnyc",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Connecting NYC job seekers to workforce services.",
   "author": "Mayor's Office for Economic Opportunity",
   "license": "ISC",
@@ -11,7 +11,8 @@
     "styles": "node scripts/styles.js",
     "scripts": "node scripts/scripts.js",
     "svgs": "node scripts/svgs.js",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "version": "echo \"No version task required\""
   },
   "dependencies": {
     "@nycopportunity/access-patterns": "^0.15.13",
