--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -5,20 +5,22 @@
   "author": "Mayor's Office for Economic Opportunity",
   "license": "ISC",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently \"node scripts/scripts.js -w\" \"node scripts/styles.js -w\"",
+    "dev": "cross-env NODE_ENV=development concurrently \"node bin/scripts.js -w\" \"node bin/styles.js -w\"",
     "build": "cross-env NODE_ENV=production npm run scripts && npm run svgs && npm run styles",
     "rollup": "rollup -c",
-    "styles": "node scripts/styles.js",
-    "scripts": "node scripts/scripts.js",
-    "svgs": "node scripts/svgs.js",
+    "styles": "node bin/styles.js",
+    "scripts": "node bin/scripts.js",
+    "svgs": "node bin/svgs.js",
     "start": "npm run dev",
     "version": "echo \"No version task required\""
   },
   "dependencies": {
     "@nycopportunity/access-patterns": "^0.15.13",
     "@nycopportunity/pattern-attribution": "^1.0.3",
-    "@nycopportunity/patterns-framework": "^1.0.0-14",
-    "@nycopportunity/working-patterns": "0.0.1-42",
+    "@nycopportunity/pattern-menu": "^1.0.0",
+    "@nycopportunity/pattern-navigation": "^1.0.2",
+    "@nycopportunity/pttrn-scripts": "^1.0.6",
+    "@nycopportunity/working-patterns": "^0.0.1-44",
     "@vue/compiler-sfc": "^3.0.0-rc.2",
     "axios": "^0.19.2",
     "feather-icons": "^4.28.0",
@@ -27,18 +29,17 @@
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@nycopportunity/pttrn": "^1.0.6",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^2.3.3",
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^9.8.6",
     "chokidar": "^3.4.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "css-mqpacker": "^7.0.0",
     "glob": "^7.1.6",
-    "rollup": "^2.16.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-vue": "^6.0.0-beta.9",
     "sass": "^1.26.8",
     "shelljs": "^0.8.4",
