--- a/wp-content/mu-plugins/config/integrations.yml
+++ b/wp-content/mu-plugins/config/integrations.yml
@@ -1,4 +1,6 @@
 - handle: data-layer
+  name: Data Layer
+  instructions: Required. This is required at the top level for Google Analytics, Tag Manager, and Optimize integrations.
   dep: DATA_LAYER
   in_footer: false
   inline:
@@ -6,6 +8,8 @@
     position: before
 
 - handle: google-optimize
+  name: Google Optimize
+  instructions: Enables the creation, previewing, and running of active Optimize experiments (A/B testing). Disable when there is no active experiment to improve site performance. Additionally, Optimize is integrated through the Google Analytics tag. That will need to be active in addition to this integration.
   dep: GOOGLE_OPTIMIZE_ID
   localize:
     - GOOGLE_OPTIMIZE_ID
@@ -17,6 +21,8 @@
     path: config/integrations/styles/google-optimize.css
 
 - handle: google-analytics
+  name: Google Analytics
+  instructions: Required for Google Tag Manger and Optimize integrations. Site analytics tracking.
   path: https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTICS }}
   dep: GOOGLE_ANALYTICS
   localize:
@@ -30,6 +36,8 @@
     async: true
 
 - handle: google-tag-manager
+  name: Google Tag Manager
+  instructions: Enables the addition of event tracking through Google Tag Manager.
   dep: GOOGLE_TAG_MANAGER
   localize:
     - GOOGLE_TAG_MANAGER
@@ -44,12 +52,15 @@
     path: config/integrations/body/google-tag-manager.html
 
 # - handle: google-recaptcha
+#   name: Google ReCaptcha
 #   path: https://www.google.com/recaptcha/api.js?onload=reCaptchaCallback&render=explicit
 #   in_footer: false
 #   attrs:
 #     async: true
 
 - handle: google-translate-element
+  name: Google Translate Element
+  instructions: Required. Enables the site's global machine translation functionality using Google Translate.
   path: https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit
   in_footer: false
   inline:
@@ -59,6 +70,8 @@
     path: config/integrations/styles/google-translate-element.css
 
 - handle: ie11-custom-properties
+  name: IE 11 Custom Properties
+  instructions: Enables CSS custom properties for Internet Explorer 11 (which is deprecated) support.
   dep: SUPPORT_IE_11
   in_footer: false
   inline:
@@ -66,6 +79,8 @@
     position: before
 
 - handle: animate-on-scroll
+  name: Animate on Scroll
+  instructions: Enables scrolling animations (fading in) on the homepage.
   path: https://cdn.jsdelivr.net/gh/michalsnik/aos@v2.3.4/dist/aos.js
   in_footer: false
   inline:
