--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -15,35 +15,24 @@
     "version": "echo \"No version task required\""
   },
   "dependencies": {
-    "@nycopportunity/access-patterns": "^0.15.13",
-    "@nycopportunity/pattern-attribution": "^1.0.3",
-    "@nycopportunity/pattern-menu": "^1.0.0",
-    "@nycopportunity/pattern-navigation": "^1.0.2",
-    "@nycopportunity/pttrn-scripts": "^1.0.7",
-    "@nycopportunity/working-patterns": "^0.0.1-44",
-    "@vue/compiler-sfc": "^3.0.0-rc.2",
+    "@nycopportunity/working-patterns": "^0.0.1-48",
     "axios": "^0.19.2",
     "feather-icons": "^4.28.0",
+    "postcss": "^8.3.11",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@nycopportunity/pttrn": "^1.0.6",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-replace": "^2.3.3",
-    "autoprefixer": "^9.8.6",
-    "chokidar": "^3.4.0",
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
-    "css-mqpacker": "^7.0.0",
-    "glob": "^7.1.6",
-    "rollup-plugin-vue": "^6.0.0-beta.9",
-    "sass": "^1.26.8",
-    "shelljs": "^0.8.4",
-    "svgstore": "^3.0.0-2",
+    "@hail2u/css-mqpacker": "^9.0.0",
+    "@nycopportunity/pttrn": "^1.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.12",
+    "rollup-plugin-vue": "^6.0.0",
+    "tailwindcss": "^2.2.19",
+    "tailwindcss-logical": "^2.0.0",
     "vue-router": "^3.3.4"
   }
 }
