--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -5,17 +5,13 @@
   "author": "Mayor's Office for Economic Opportunity",
   "license": "ISC",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently \"node bin/scripts.js -w\" \"node bin/styles.js -w\"",
-    "build": "cross-env NODE_ENV=production npm run scripts && npm run svgs && npm run styles",
-    "rollup": "rollup -c",
-    "styles": "node bin/styles.js",
-    "scripts": "node bin/scripts.js",
-    "svgs": "node bin/svgs.js",
-    "start": "npm run dev",
+    "start": "npm run development && cross-env NODE_ENV=development concurrently \"pttrn -w\" -p \"none\"",
+    "development": "pttrn clean && pttrn && pttrn rename",
+    "production": "pttrn clean && cross-env NODE_ENV=production pttrn && cross-env NODE_ENV=production pttrn rename",
     "version": "echo \"No version task required\""
   },
   "dependencies": {
-    "@nycopportunity/working-patterns": "^0.0.1-48",
+    "@nycopportunity/working-patterns": "^0.0.1-53",
     "axios": "^0.19.2",
     "feather-icons": "^4.28.0",
     "postcss": "^8.3.11",
@@ -23,13 +19,14 @@
   },
   "devDependencies": {
     "@hail2u/css-mqpacker": "^9.0.0",
-    "@nycopportunity/pttrn": "^1.3.0",
+    "@nycopportunity/pttrn": "^1.4.4",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.12",
+    "postcss-scss": "^4.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "tailwindcss": "^2.2.19",
     "tailwindcss-logical": "^2.0.0",
