--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -11,10 +11,11 @@
     "version": "echo \"No version task required\""
   },
   "dependencies": {
-    "@nycopportunity/working-patterns": "^0.0.1-53",
+    "@nycopportunity/working-patterns": "^0.0.1-54",
     "axios": "^0.19.2",
     "feather-icons": "^4.28.0",
     "postcss": "^8.3.11",
+    "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.11"
   },
   "devDependencies": {
