--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@nycopportunity/working-patterns": "^0.0.1-55",
+    "@nycopportunity/wp-archive-vue": "^1.2.0",
     "axios": "^0.25.0",
     "feather-icons": "^4.28.0",
     "postcss": "^8.3.11",
     "regenerator-runtime": "^0.13.9",
-    "vue": "^2.6.11"
+    "vue": "^2.6.12",
+    "vue-router": "^3.3.4",
+    "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
     "@hail2u/css-mqpacker": "^9.0.0",
@@ -28,9 +31,8 @@
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.12",
     "postcss-scss": "^4.0.2",
-    "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-vue": "^5.1.9",
     "tailwindcss": "^2.2.19",
-    "tailwindcss-logical": "^2.0.0",
-    "vue-router": "^3.3.4"
+    "tailwindcss-logical": "^2.0.0"
   }
 }
