--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -11,6 +11,7 @@
     "version": "echo \"No version task required\""
   },
   "dependencies": {
+    "@nycopportunity/pttrn-scripts": "^1.0.13",
     "@nycopportunity/working-patterns": "^0.0.1-55",
     "@nycopportunity/wp-archive-vue": "^1.3.0",
     "axios": "^0.25.0",
