--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
   },
   "require-dev": {
     "filp/whoops": "*",
+    "nyco/wp-login": "^0.0.1",
     "squizlabs/php_codesniffer": "*",
     "whoops/soap": "*",
     "wpackagist-plugin/query-monitor": "*",
