--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,8 @@
 /wp-content/themes/*twenty*/
 /wp-content/themes/*twenty*/*
 /wp-content/plugins/hello.php
-/wp-content/plugins/wp-auto-login/*
+/wp-content/mu-plugins/wp-login
+/wp-content/mu-plugins/wp-login/*
 
 # WP-Engine Specific #
 ######################
