--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "nyco/working-nyc",
-  "description": "Find and connect to services and resources that can help you prepare for and get a job.",
-  "version": "1.9.7",
+  "description": "Start your journey towards a career through work, job training, and education",
+  "version": "2.0.0",
   "authors": [
     {
       "name": "NYC Opportunity",
