--- a/wp-content/themes/workingnyc/package.json
+++ b/wp-content/themes/workingnyc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "workingnyc",
-  "version": "1.9.7",
-  "description": "Connecting NYC job seekers to workforce services.",
+  "version": "2.0.0",
+  "description": "Start your journey towards a career through work, job training, and education",
   "author": "Mayor's Office for Economic Opportunity",
   "private": "true",
   "scripts": {
