--- a/wp-content/themes/workingnyc/.npmrc
+++ b/wp-content/themes/workingnyc/.npmrc
@@ -1,1 +1,3 @@
 @hail2u:registry=https://npm.pkg.github.com
+//registry.npmjs.org/:_authToken={{ NPM Personal Access Token }}
+//npm.pkg.github.com/:_authToken={{ GitHub Personal Access Token }}
