--- a/wp-content/themes/workingnyc/.npmrc
+++ b/wp-content/themes/workingnyc/.npmrc
@@ -1,3 +1,3 @@
 @hail2u:registry=https://npm.pkg.github.com
-//registry.npmjs.org/:_authToken={{ NPM Personal Access Token }}
-//npm.pkg.github.com/:_authToken={{ GitHub Personal Access Token }}
+//registry.npmjs.org/:_authToken=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 
+//npm.pkg.github.com/:_authToken=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
