--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "wpackagist-plugin/wp-bitly": "*",
     "wpackagist-plugin/wp-security-questions": "*",
     "wpackagist-plugin/wps-hide-login": "*",
-    "wpackagist-plugin/wpscan": "*"
+    "wpackagist-plugin/wpscan": "*",
+    "sendgrid/sendgrid": "^8.1"
   },
   "require-dev": {
     "filp/whoops": "*",
