--- a/wp-content/mu-plugins/config/config-sample.yml
+++ b/wp-content/mu-plugins/config/config-sample.yml
@@ -37,3 +37,13 @@ WP_HEADERS_NOSNIFF: true # Prevent MIME Type sniffing
 # development:
 
 # testing:
+
+# SENDGRID_API_KEY: 
+# SENDGRID_CONFIRMATION_TEMPATE_ID: 
+# SENDGRID_CONFIRMED_TEMPLATE_ID: 
+# SENDGRID_LIST_ID: 
+# SENDGRID_SENDGER_EMAIL_ADDRESS: 
+# SENGRID_SENDER_NAME: 
+# SENDGRID_CONFIRMED_SUBSCRIPTION_SUBJECT: 
+# SENDGRID_SUBSCRIPTION_CONFIRM_SUBJECT: 
+# SENDGRID_CONFIRMED_TEMPLATE_NAME: 
