Fixed typo, updated the http action to post and sanitize the email address and zip code.

--- a/wp-content/mu-plugins/config/config-sample.yml
+++ b/wp-content/mu-plugins/config/config-sample.yml
@@ -42,8 +42,8 @@ WP_HEADERS_NOSNIFF: true # Prevent MIME Type sniffing
 # SENDGRID_CONFIRMATION_TEMPATE_ID: 
 # SENDGRID_CONFIRMED_TEMPLATE_ID: 
 # SENDGRID_LIST_ID: 
-# SENDGRID_SENDGER_EMAIL_ADDRESS: 
-# SENGRID_SENDER_NAME: 
+# SENDGRID_SENDER_EMAIL_ADDRESS: 
+# SENDGRID_SENDER_NAME: 
 # SENDGRID_CONFIRMED_SUBSCRIPTION_SUBJECT: 
 # SENDGRID_SUBSCRIPTION_CONFIRM_SUBJECT: 
 # SENDGRID_CONFIRMED_TEMPLATE_NAME: 
